--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Django==4.2.7
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.0
-django-cors-headers==4.3.0
-psycopg2-binary==2.9.9
-python-decouple==3.8
+Django>=4.2,<5.1
+djangorestframework>=3.14
+djangorestframework-simplejwt>=5.3.0
+setuptools
+psycopg2-binary
+python-dotenv
+gunicorn
