--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django>=4.2,<5.1
 djangorestframework>=3.14
 djangorestframework-simplejwt>=5.3.0
+django-cors-headers
 setuptools
 psycopg2-binary
 python-dotenv
